--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,22 +20,52 @@
 
     <tr>
         <td>
+            <ul>X
             <li>
                 <a th:href="@{/list/jobs(column='All',value='View All')}">View All</a>
             </li>
-        </td>
-        <td>
-            <li th:each="employer : ${employers}">
-                <a th:href="@{/list/jobs(column=employer,value=${employer.name})}" th:text="${employer.name}"></a>
-            </li>
-        </td>
-        <td>
-            <li th:each="skill : ${skills}">
-                <a th:href="@{/list/jobs(column=skill,value=${skill.name})}" th:text="${skill.name}"></a>
-            </li>
-        </td>
-    </tr>
-</table>
+                <!DOCTYPE html>
+                <html xmlns:th="http://www.thymeleaf.org/">
+                <head th:replace="~{fragments :: head}">
+                </head>
+                <body>
 
-</body>
-</html>
+                <div th:replace="~{fragments :: page-header}"></div>
+
+                <div class="container body-content">
+                    <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+                    <h2 class = "centered">View Jobs By Category</h2>
+                </div>
+
+                <table class="centeredTable">
+                    <tr>
+                        <th>All</th>
+                        <th>Employer</th>
+                        <th>Skill</th>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <li>
+                                <a th:href="@{/list/jobs(column='All',value='View All')}">View All</a>
+                            </li>
+                        </td>
+                        <td>
+                            <ul>
+                            <li th:each="employer : ${employers}">
+                                <a th:href="@{/list/jobs(column='Employer',value=${employer.name})}" th:text="${employer.name}"></a>
+                            </li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                            <li th:each="skill : ${skills}">
+                                <a th:href="@{/list/jobs(column='Skill',value=${skill.name})}" th:text="${skill.name}"></a>
+                            </li>
+                        </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                </body>
+                </html>
